# project-xml-parse

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
tests/: test_xml_diff.py
tests/fixtures/: RS_ViaOW.xml  RS_via-3.xml  fixture1.xml  fixture2.xml  result.json  result_min.json
xml_diff/: __init__.py  cli.py  dict_diff.py  diff.py  files_diff.py  itineraries.py  parsing.py  tree.py
xml_diff/scripts/: xml_diff.py
