[tool.poetry]
name = "'xml-diffDddarknight'"
version = "0.1.0"
description = ""
authors = ["Dddarknight <9801677@gmail.com>"]
packages = [
  { include = "xml_diff" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xml-diff = "xml_diff.scripts.xml_diff:main"
