[tool.poetry]
name = "'xmldiffDddarknight'"
version = "0.1.0"
description = "Shows difference between 2 xml-files which contain information about flights parameters"
authors = ["Dddarknight <9801677@gmail.com>"]
license = "GPL-3.0-only"
keywords = ["diff", "difference", "xml"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing"
]
repository = "https://github.com/Dddarknight/project-xml-parse"
packages = [
  { include = "xml_diff" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xml-diff = "xml_diff.scripts.xml_diff:main"
